refactorización semántica sugerida por ide